src/main/java/semantic/abstractSintaxTree/test/failing/parameterNumberMismatch.ru
/? ParameterCountMismatchException
start {
    (IO.out_str("Hello", ",", "World!"));
}